# VSB

./: .gitignore  README.md  create_function.sql  test.html
1_semestr/: README.md
1_semestr/FPR/: README.md  simple.hs
1_semestr/FPR/test1/: priprava.hs  test.hs
1_semestr/FPR/test2/: test2.hs
1_semestr/UPR/: README.md
2_semestr/: README.md
2_semestr/APPS/: README.MD
2_semestr/Alg1/: .gitignore  README.md
2_semestr/Alg1/Ukoly/Ukol3/ukol3/: CMakeLists.txt  ukol3.cpp  ukol3.h
2_semestr/Alg1/Ukoly/Ukol3/ukol3/TestData/: graph1.txt  graph2.txt  results.txt
2_semestr/OOP/: .gitattributes  README.md
2_semestr/STD/: README.md
2_semestr/SWI/: README.md
3_semestr/: README.md
3_semestr/C# I/: README.md  cv1.md
3_semestr/DS I/: DSI-kapitoly-1-3-reseni-discord.sql  Reseni-Ficek-Kapitola-1.sql  Reseni-Ficek-Kapitola-2.sql  SQLQuery2.sql
3_semestr/POS/: Moravec-2024-KS.xlsx  topologieH.pkt  vlan config.txt
3_semestr/UASS/: README.md
4_semestr/SKJ/: cheatsheet.py  readme.md
4_semestr/URO/: README.md
5_semestr/Notes/: TAMZ2.md  Task.md  Tasks.md  Untitled.md  VIS.md  ZSU.md
5_semestr/TAMZ2/: README.md  lesson1.sql  lesson5.sql  settings.gradle.kts
5_semestr/TDS2/: README.md  allinone.sql  lesson1.sql  lesson10.sql  lesson11.sql  lesson12.sql  lesson13.sql  lesson14.sql  lesson15.sql  lesson2.sql  lesson3.sql  lesson4.sql  lesson5.sql  lesson6.sql  lesson7.sql  lesson8.sql  lesson9.sql  toshow.md
5_semestr/VIS/: 01-Vision.md  02-Functional.md  03-TechnicalSpec.md  04-Design.md
5_semestr/ZPG/: README.md
5_semestr/ZSU/: README.md
(+1614 files in other folders)
